# Educational-Practice

./: .env.example  README.md  enums.py  main.py  package-lock.json  pyproject.toml  template_proj.ipynb  test.ipynb  test.py
controllers/: user.py
migration/: env.py
migration/versions/: 03972d751223_create_relationshipe_for_user_to_profile.py  a37ac459f946_added_enums_into_user_table.py  b4e830e1f283_fix_profile_table.py  cb94e2513ec3_create_database.py
models/: __init__.py  profile.py  user.py
schemas/: user.py
settings/: __init__.py  config.py  database.py  loggers.py
